# vpn

./: .env  .env.example  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  pytest.ini  run.sh  setup.sh
.github/workflows/: ci.yml
docs/: ARCHITECTURE_DECISIONS.md  PERSISTENCE.md
examples/: api_usage.py  custom_adapter.py  settings.json  settings.py  sniffing.json  streamSettings.json
src/: __init__.py  config.py
src/application/: __init__.py  services.py
src/domain/: __init__.py  entities.py  exceptions.py  ports.py
src/infrastructure/: __init__.py  di.py  x_ui_adapter.py
src/infrastructure/persistence/: __init__.py  database.py  models.py  repository.py
src/presentation/: __init__.py  app.py  middleware.py
src/presentation/api/: adapters.py  clients.py  inbounds.py  schemas.py  stats.py
tests/: __init__.py
